怎么判断是否为空对象

--- a/bug.html
+++ b/bug.html
@@ -9,11 +9,15 @@
 <body>
     <div>
         <p>
-            append添加的元素事件无效？
-            
+        		1.append添加的元素事件无效？
             原因：  因为append中的节点是在整个文档加载后才添加的，页面并不会为未来的元素初始化添加点击事件，所以使用这种方式动态添加的节点中的点击事件没有生效。
-
-            解决方法： 后来用事件委托的方法解决
+			解决方法： 后来用事件委托的方法解决
+			
+			2.华为自带的浏览器不支持es6；
+			
+			3.移动端调试工具vConsole;
+			
+			4.移动端真机页面调试工具 spy-debugger 
         </p>
         
     </div>
