--- a/window.html
+++ b/window.html
@@ -15,7 +15,6 @@
 			//close方法用于自动关闭浏览器窗口。
 			window.close()
 		}
-
 		function ope() {
 			//语法格式：window.open(URL,窗口名称,窗口风格)
 			window.open("https://www.baidu.com")
@@ -40,7 +39,6 @@
 			    console.log("Hello " + name + "!")
     			}
 		}
-		
 		//定时设置，当到了指定的毫秒数后，自动执行代码字符表达式。
 		function timeout(){
 			setTimeout(function(){
@@ -53,11 +51,33 @@
 				console.log("定时")
 			},1000)
 		}
-		function(){
+		function clearin(){
 			clearInterval()
 		}
 		//功能：取消setInterval设置的定时。其中的参数是setInterval方法的返回值。
-		
+		document.URL // 返回当前url地址
+		//history 的属性方法
+		function his(){
+			history.length //返回浏览器历史列表中的 URL 数量
+			history.back() //加载 history 列表中的前一个 URL
+			history.forward()	// 加载 history 列表中的下一个 URL。
+			history.go()	     // 加载 history 列表中的某个具体页面。			
+		}
+		// location 的属性方法
+		function loc(){
+			// 假设当前的 URL 是: http://example.com:1234/test.htm#part2
+			console.log(location.origin)// 返回域名http://example.com:1234
+			console.log(location.hash) //hash 属性是一个可读可写的字符串，该字符串是 URL 的锚部分（从 # 号开始的部分）
+			console.log(location.host) //host 属性是一个可读可写的字符串，可设置或返回当前 URL 的主机名称和端口号 example.com:1234
+			console.log(location.hostname) // 返回example.com
+			console.log(location.href) // 返回或设置整个url地址
+			console.log(location.pathname) // 可设置或返回当前 URL 的路径部分 /test.htm
+			console.log(location.port) // 可设置或返回当前 URL 的端口部分 1234
+			console.log(location.protocol) // 设置或返回当前 URL 的协议
+			console.log(location.search) // 设置或返回从问号 (?) 开始的 URL（查询部分）
+			window.location.reload() // 重新加载当前页面
+			window.location.replace("http://www.baidu.com") // 替换当前页面，返回不过去，不能用浏览器的history 的属性
+		}
 	</script>
 
 </html>
