--- a/webscoket.html
+++ b/webscoket.html
@@ -8,7 +8,7 @@
 <h2>WebSocket Test</h2>
 <div id="output"></div>
     <script language="javascript"type="text/javascript">
-        var wsUri ="ws://echo.websocket.org/";
+        var wsUri ="ws://echo.websocket.org/";// 后台给的接口
         var output;
 
         function init() {
