--- a/bug.html
+++ b/bug.html
@@ -54,6 +54,14 @@
                 1、在data 里写入  logo: require('../assets/images/logo.png')
 
                 2、在模板中写入 <img :src="logo">
+	    9.背景图片
+		position: absolute;
+		left:0;
+		right:0;
+		top:0;
+		bottom: 0;
+	    10.禁止input 输入法弹出
+		pointer-events: none;
         </p>
         
     </div>
