--- a/bug.html
+++ b/bug.html
@@ -62,7 +62,7 @@
 			bottom: 0;
 			10.禁止input 输入法弹出
 			pointer-events: none;
-			11.h5的分享页面只能h5页面
+			11.h5的分享页面只能h5页面(微信内部可以)
         </p>
         
     </div>
