--- a/my-react/public/index.html
+++ b/my-react/public/index.html
@@ -48,4 +48,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://cdn.bootcss.com/vConsole/3.0.0/vconsole.min.js"></script>
+  <script>     
+    var vConsole = new VConsole()
+    console.log('Hello world')
+  </script>
+
 </html>
