--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-		<script type="text/javascript">
-			var a = [];
-			a.push(1,[2,[3]]]);
-			console.log(a)
-		</script>
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<title></title>
+</head>
+
+<body>
+	<script type="text/javascript">
+		var a = [];
+		a.push(1, [2, [3]]);
+		console.log(a)
+	</script>
+</body>
+
 </html>
