--- a/share.html
+++ b/share.html
@@ -16,8 +16,18 @@
     }
     keep-aplive: 长链接
 
-
   </div>
+  <script>
+    var reg = /^1[345678][0-9]{9}$/g;
+    console.log(reg.test(15328044636));// true
+    console.log(reg.test(15328044636));// false
+    //  这是因为正则reg的g属性，设置的全局匹配。RegExp有一个lastIndex属性，来保存索引开始位置。
+    //上面的问题，第一次调用的lastIndex值为0，到了第二次调用，值变成了11。
+
+    var reg = /^1[345678][0-9]{9}$/g;
+    console.log(reg.lastIndex, reg.test(15328044636));// 0 true
+    console.log(reg.lastIndex, reg.test(15328044636));// 11 false
+  </script>
 </body>
 
 </html>
