--- a/bug.html
+++ b/bug.html
@@ -69,6 +69,37 @@
 			12. antd select 下拉框分离 getPopupContainer={triggerNode => triggerNode.parentNode}
 
 			13. 获取 scheduling 后面的参数 const moduleId = parseInt(location.href.split('scheduling/')[1], 10);
+
+			14. 函数去抖
+			<script>
+				var timer = null;
+				function debounce(method, context) {
+					clearTimeout(timer);
+					timer = setTimeout(function () {
+						method.call(context);
+					}, 1000);
+				}
+
+				function print() {
+					console.log('hello world');
+				}
+
+				window.onscroll = function () {
+					debounce(print);
+				};
+			</script>
+			15.正则
+			<script>
+				var reg = /^1[345678][0-9]{9}$/g;
+				console.log(reg.test(15328044636));// true
+				console.log(reg.test(15328044636));// false
+				//  这是因为正则reg的g属性，设置的全局匹配。RegExp有一个lastIndex属性，来保存索引开始位置。
+				//上面的问题，第一次调用的lastIndex值为0，到了第二次调用，值变成了11。
+
+				var reg = /^1[345678][0-9]{9}$/g;
+				console.log(reg.lastIndex, reg.test(15328044636));// 0 true
+				console.log(reg.lastIndex, reg.test(15328044636));// 11 false
+			</script>
 		</p>
 
 	</div>
