--- a/es6.html
+++ b/es6.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>es6</title>
 </head>
+
 <body>
-    
+
 </body>
 <script>
 
     //promise
-    new Promise(function(){
+    new Promise(function () {
         console.log('支持promise')
     })
 
-    function test(resolve,reject){
-        let timeOut = Math.random()*2;
+    function test(resolve, reject) {
+        let timeOut = Math.random() * 2;
         // log('set timeout to:'+timeOut+'seconds');
-        setTimeout(function(){
-            if(timeOut<1){
+        setTimeout(function () {
+            if (timeOut < 1) {
                 console.log('call resolve()...');
                 resolve('200 ok');//res 成功时返回的结果
-            }else{
-               console.log('call reject()...');
-                reject('timeout in '+timeOut+'seconds.')//err 失败时返回的结果
+            } else {
+                console.log('call reject()...');
+                reject('timeout in ' + timeOut + 'seconds.')//err 失败时返回的结果
             }
-        },timeOut*1000);
+        }, timeOut * 1000);
     }
 
     // new Promise(test).then((res)=>{
@@ -39,7 +41,7 @@
     // 0.5秒后返回input*input的计算结果:
     function multiply(input) {
         return new Promise(function (resolve, reject) {
-           console.log('calculating ' + input + ' x ' + input + '...');
+            console.log('calculating ' + input + ' x ' + input + '...');
             setTimeout(resolve, 500, input * input);
         });
     }
@@ -55,25 +57,26 @@
         resolve(1224);
     });
 
-//  p.then(multiply)
-//  .then(add)
-//  .then(multiply)
-//  .then(add)
-//  .then(function (result) {
-//      console.log('Got value: ' + result);
-//  });
-   //Promise.all([multiply(1,1),add(2,2)]).then(function(res){console.log(res)})
-    
+    //  p.then((res) => {multiply(res)})
+    //  .then(add)
+    //  .then(multiply)
+    //  .then(add)
+    //  .then(function (result) {
+    //      console.log('Got value: ' + result);
+    //  });
+    //Promise.all([multiply(1,1),add(2,2)]).then(function(res){console.log(res)})
+
     //传参默认值
-    function breakfast(dessert='apple',drink='milk'){
+    function breakfast(dessert = 'apple', drink = 'milk') {
         return `${dessert} ${drink}`
     }
     //console.log(breakfast())
-    var arr1 = ["dfdf","ghgh","err","tyt","ghgh"]
-    var arr2 = ["dhj","ghbn","ghr","hghg","tytyty"]
-    arr2.forEach(function(s,i){
-    		arr1.push(s)
+    var arr1 = ["dfdf", "ghgh", "err", "tyt", "ghgh"]
+    var arr2 = ["dhj", "ghbn", "ghr", "hghg", "tytyty"]
+    arr2.forEach(function (s, i) {
+        arr1.push(s)
     })
     console.log(arr1)
 </script>
+
 </html>
