--- a/study.html
+++ b/study.html
@@ -9,7 +9,64 @@
 </head>
 
 <body>
-	<div style="width:0px;height:0px;border-top:100px solid red;border-left:150px solid transparent;border-bottom:50px solid transparent;border-right:150px solid transparent;"></div>
+	<div id="app">
+		<input type="text" id="txt">
+		<input type="text" id="txt44">
+		<p id="show"></p>
+	</div>
+	<script type="text/javascript">
+		// 双向绑定
+		var obj = {}
+		Object.defineProperty(obj, 'txt', {
+			get: function () {
+				return obj
+			},
+			set: function (newValue) {
+				// document.getElementById('txt44').value = newValue
+				document.getElementById('show').innerHTML = newValue
+			}
+		})
+		document.getElementById('txt44').addEventListener('keyup', function (e) {
+			obj.txt = e.target.value
+		})
+		// 1. 递归实现深拷贝
+		function deepClone(obj) {
+			let objClone = Array.isArray(obj) ? [] : {};
+			if (obj && typeof obj === "object") {
+				for (key in obj) {
+					if (obj.hasOwnProperty(key)) {
+						//判断ojb子元素是否为对象，如果是，递归复制
+						if (obj[key] && typeof obj[key] === "object") {
+							objClone[key] = deepClone(obj[key]);
+						} else {
+							//如果不是，简单复制
+							objClone[key] = obj[key];
+						}
+					}
+				}
+			}
+			return objClone;
+		}
+		let a = [1, 2, 3, 4],
+			b = deepClone(a);
+		a[0] = 2;
+		console.log(a, b);
+
+		// 2.除了递归，我们还可以借用JSON对象的parse和stringify
+		function deepClone(obj) {
+			let _obj = JSON.stringify(obj),
+				objClone = JSON.parse(_obj);
+			return objClone
+		}
+		let a = [0, 1, [2, 3], 4],
+			b = deepClone(a);
+		a[0] = 1;
+		a[2][0] = 1;
+		console.log(a, b);
+	</script>
+	<div
+		style="width:0px;height:0px;border-top:100px solid red;border-left:150px solid transparent;border-bottom:50px solid transparent;border-right:150px solid transparent;">
+	</div>
 	<div>
 		<input type="button" value="播放" id='play'>
 	</div>
