--- a/study.html
+++ b/study.html
@@ -15,6 +15,9 @@
 		<p id="show"></p>
 	</div>
 	<script type="text/javascript">
+		// npm config set registry https://registry.npm.taobao.org/
+		// npm config delete registry 恢复原样。
+
 		// 双向绑定
 		var obj = {}
 		Object.defineProperty(obj, 'txt', {
