--- a/es6.html
+++ b/es6.html
@@ -12,7 +12,17 @@
 
 </body>
 <script>
-
+    let list = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33]
+    let newlist = []
+    for (let i = 0; i < 6; i++) {
+        let length = list.length
+        let i = Math.round(Math.random() * length)
+        list.splice(i - 1, 1);
+        // delete list[i - 1]
+        newlist.push(list[i])
+    }
+    newlist.push(Math.round(Math.random() * 16))
+    document.write(newlist.join(","))
     //promise
     new Promise(function () {
         console.log('支持promise')
