--- a/gitDrect.html
+++ b/gitDrect.html
@@ -38,6 +38,7 @@
     git log --pretty=oneline //如果嫌上面的输出信息过多可以使用这条（只输出版本号）
     git reset --hard HEAD^ //回到上个版本，
     git reset --hard HEAD^^ //是上上个版本
+    git clean -df // 清除
 
     提交到远程仓库
     接下来如果你直接提交会发现提交不了, 说远端做了更改需要先pull一下, 如果pull那就又回到最新版本了，相当于没回退。
