--- a/maodian.html
+++ b/maodian.html
@@ -12,8 +12,7 @@
         ul{
             list-style: none;
             position: fixed;
-            top:20px;
-            left:20px;
+            background-color: blue;
         }
         li{
             margin:20px;
@@ -21,32 +20,36 @@
         li>a{
             font-size:20px;
             margin:20px;
+            color: #fff;
         }
-        .box>div{
+        .active {
+            color: red;
+        }
+        #box>div{
             width:100%;
             height:300px;
         }
-        .box>div:nth-child(1){
+        #box>div:nth-child(1){
             background-color: red;
         }
-        .box>div:nth-child(2){
+        #box>div:nth-child(2){
             background-color: yellow;
         }
-        .box>div:nth-child(3){
+        #box>div:nth-child(3){
             background-color: green;
         }
-        .box>div:nth-child(4){
+        #box>div:nth-child(4){
             background-color: purple;
         }
     </style>
 </head>
 <body>
     <ul>
-        <li>
-            <a href="#t">top</a>
-            <a href="#c">content</a>
-            <a href="#f">footer</a>
-            <a href="#a">advertisement</a>
+        <li id="dsfdf">
+            <a href="#t" class="ff">top</a>
+            <a href="#c" class="ff"> content</a>
+            <a href="#f" class="ff">footer</a>
+            <a href="#a" class="ff">advertisement</a>
         </li>
     </ul>
     
@@ -56,12 +59,21 @@
         <div><a name="f">这是底部区域</a></div>
         <div><a name="a">这是广告区域</a></div>
     </div>   -->
-    <div class='box'>
+    <div id='box'>
         <div id='t'>这是头部区域</div>
         <div id='c'>这是内容区域</div>
         <div id='f'>这是底部区域</div>
         <div id='a'>这是广告区域</div>
     </div>
-
 </body>
+<script>
+    let box = document.getElementById("dsfdf");
+    let a = document.getElementsByClassName("ff");
+    box.onclick = function (e) {
+        for(let i=0; i < 4 ; i++){
+            a[i].className = "ff"
+        }
+        e.target.classList.add("active");
+    }
+</script>
 </html>
