--- a/study.html
+++ b/study.html
@@ -246,6 +246,9 @@
 			}
 		});
 
+		// 金额分隔符
+		var s = '12345237987584.00';
+		var d = s.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1,")
 
 	</script>
 </body>
