--- a/dfdf.html
+++ b/dfdf.html
@@ -34,11 +34,11 @@
       </div>
     </div>
 多舒服多舒服的是非得失
-<<<<<<< HEAD
-111
-222
-=======
+djkfhdjkh
+dsfjkhdskjfhjk
 
->>>>>>> parent of 45c333b... 11
+<div>
+  dsjkfhdjskhfjkdsf
+</div>
   </body>
   </html>
